--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,24 +4,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background_yellow"
     tools:context=".MainActivity">
+
+    <Button
+        android:id="@+id/btn_add_room"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="false"
+        android:layout_alignParentTop="false"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="false"
+        android:layout_alignParentBottom="true"
+        android:text="create" />
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/room_name_edittext"
         android:layout_width="match_parent"
         android:layout_height="55dp"
         android:layout_alignParentBottom="true"
-        android:hint="hint"
-        android:text="a new chat room..?"
-        android:textAlignment="viewStart" />
-
-    <Button
-        android:id="@+id/btn_add_room"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:text="add room" />
+        android:background="@color/black"
+        android:hint="a new chat room...?"
+        android:textAlignment="viewStart"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white" />
 
     <ListView
         android:id="@+id/listView"
