--- a/app/src/main/res/layout/chat_room.xml
+++ b/app/src/main/res/layout/chat_room.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/background_yellow">
 
     <Button
         android:id="@+id/btn_send"
@@ -22,7 +24,10 @@
             android:id="@+id/msg_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="hint" />
+            android:background="@color/black"
+            android:hint="say something!"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <ScrollView
@@ -30,15 +35,28 @@
         android:layout_height="613dp">
 
         <LinearLayout
+            android:id="@+id/conversation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:clipToPadding="false"
+            android:dividerPadding="2dp"
+            android:orientation="vertical"
+            android:paddingVertical="5dp">
 
             <TextView
                 android:id="@+id/textView"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="30sp" />
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginRight="50dp"
+                android:background="@android:drawable/toast_frame"
+                android:backgroundTint="@color/black"
+                android:text="test TExttest TExttest TExttest TExttest TExttest TExttest TExttest TExttest TExttest TExttest TExttest TExttest TExttest TExttest TExttest TExt"
+                android:textColor="@color/white"
+                android:textSize="24sp" />
+
         </LinearLayout>
     </ScrollView>
+
 </RelativeLayout>
