chat bubbles and color changes

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,33 @@
     android:background="@color/background_yellow"
     tools:context=".MainActivity">
 
+    <FrameLayout
+        android:id="@+id/banner"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:background="@color/black">
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/yellowboxfont"
+            android:paddingLeft="20dp"
+            android:paddingTop="30dp"
+            android:text="yellow box"
+            android:textColor="@color/white"
+            android:textSize="36sp" />
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="wrap_content"
+            android:layout_height="70dp"
+            android:paddingLeft="70dp"
+            android:paddingTop="20dp"
+            app:srcCompat="@drawable/cube" />
+
+    </FrameLayout>
+
     <Button
         android:id="@+id/btn_add_room"
         android:layout_width="wrap_content"
@@ -32,9 +59,11 @@
     <ListView
         android:id="@+id/listView"
         android:layout_width="match_parent"
-        android:layout_height="671dp"
+        android:layout_height="641dp"
+        android:layout_alignParentLeft="false"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="0dp">
+        android:layout_alignParentEnd="false"
+        android:layout_marginTop="82dp">
 
     </ListView>
 
