--- a/app/src/main/res/layout/chat_room.xml
+++ b/app/src/main/res/layout/chat_room.xml
@@ -18,7 +18,8 @@
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true">
+        android:layout_alignParentBottom="true"
+        android:hint="say something!">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/msg_input"
@@ -31,8 +32,9 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <ScrollView
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
-        android:layout_height="613dp">
+        android:layout_height="672dp">
 
         <LinearLayout
             android:id="@+id/conversation"
@@ -50,11 +52,12 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginRight="50dp"
-                android:background="@android:drawable/toast_frame"
+                android:background="@drawable/rounded_corners"
                 android:backgroundTint="@color/black"
-                android:text="test TExttest TExttest TExttest TExttest TExttest TExttest TExttest TExttest TExttest TExttest TExttest TExttest TExttest TExttest TExttest TExt"
+                android:backgroundTintMode="src_in"
+                android:lineSpacingExtra="18sp"
                 android:textColor="@color/white"
-                android:textSize="24sp" />
+                android:textSize="8sp" />
 
         </LinearLayout>
     </ScrollView>
