--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name ="background_yellow">#FFD22D</color>
+    <color name="user_bubble_color">#434343</color>
 </resources>
