--- a/app/src/main/res/layout/chat_room.xml
+++ b/app/src/main/res/layout/chat_room.xml
@@ -70,7 +70,7 @@
             android:layout_width="45dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="44dp"
-            android:background="@android:drawable/ic_menu_send"
+            android:background="@android:drawable/ic_menu_view"
             app:layout_constraintBottom_toBottomOf="@+id/msg_input"
             app:layout_constraintEnd_toEndOf="@+id/msg_input" />
 
