landing activity addition so that there is a cleaner interface for choosing a username and a proper opening page.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,7 @@
     </FrameLayout>
 
     <Button
-        android:id="@+id/btn_add_room"
+        android:id="@+id/enter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="false"
